--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@
   src: url('./fonts/Alata-Regular.ttf') format('truetype');
 }
 
+@font-face {
+  font-family:'Gothic';
+  font-weight: 400;
+  src: url('./fonts/GOTHICB.ttf') format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
